# homework-8.1

./: .gitignore  README.md  argparser.py  connection.py  main.py  models.py  pyproject.toml  requirements.txt  seed.py
data/: config.ini
src/homework-8.1/: argparser.py  main.py  models.py
src/homework_8_1/: argparser.py  connection.py  main.py  models.py  seed.py
